# agentcorerepo

./: .dockerignore  .gitignore  File_Classification_Plan.txt  build.py  constants.ts  evaluation.py  index.tsx  nemo copy.py  nemo.py  nemo_service.py  package-lock.json  package.json  pnpm-lock.yaml  service.py
24Mar/: langfuse.py
31Mar/: nemo_service.py
KPIs/: build.py  dashboard.py  dashboard1.py  index.tsx  langfuse.py
UAT Fixes 2.0/: adapter.py  build.py  edit-guardrail-modal.tsx  evaluation.py  guardrail_catalogue.py  langfuse.py  observability_provisioning.py  parsing.py  provisioning.py  rbac.py  registry_service.py  service.py  trace_store.py  traces.py  users.py  utils.py
UAT Fixes 2.0/12 May/: 20260511_add_guardrail_versioning.py  (+14 more)
agentcore/: .gitignore  pyproject.toml  requirements.txt  temp.py
agentcore/src/services/graph-rag-service/: Dockerfile  pyproject.toml
agentcore/src/services/graph-rag-service/app/: config.py  database.py  main.py  schemas.py
agentcore/src/services/graph-rag-service/app/routers/: graph_rag.py
agentcore/src/services/graph-rag-service/app/services/: neo4j_service.py
agentcore/src/services/graph-rag-service/app/utils/: key_vault.py
agentcore/src/services/guardrails-service/: .gitignore  Dockerfile  pyproject.toml
agentcore/src/services/guardrails-service/app/: config.py  database.py  main.py  schemas.py
agentcore/src/services/guardrails-service/app/models/: guardrail_catalogue.py
agentcore/src/services/guardrails-service/app/routers/: guardrails.py  registry.py
agentcore/src/services/guardrails-service/app/services/: nemo_service.py  registry_service.py
agentcore/src/services/guardrails-service/app/utils/: key_vault.py
agentcore/src/services/mcp-service/: .gitignore  Dockerfile  pyproject.toml
agentcore/src/services/mcp-service/app/: config.py  database.py  main.py
agentcore/src/services/mcp-service/app/models/: registry.py
agentcore/src/services/mcp-service/app/services/: registry_service.py  tool_service.py
agentcore/src/services/mcp-service/app/utils/: key_vault.py
file-classifier/: .env.example  Dockerfile  docker-compose.yml  requirements.txt
fixing/: langfuse.py
guardrails/: routes.tsx
langfuse/: auth.ts  authPageMode.clienttest.ts  env.mjs  env.txt  package.json  popup-callback.tsx  resolve-keyvault-secrets.ts  sign-in.tsx
saturday/: adapter.py  base_file.py  build.py
scripts/: resolve-keyvault-secrets.mjs  test-azure-connections.mjs
sunday/: build.py  service.py
web/: Dockerfile  entrypoint.sh  package.json
worker/: Dockerfile  entrypoint.sh  package.json
(+577 files in other folders)
